# c3i_backup_one

./: .env.example  AGENTS.md  ARCHITECTURE.md  README.md  TROUBLESHOOTING.md  UPSTREAM_SYNC.md  WINDOWS_SERVICE.md  docker-compose.yml  drizzle.config.ts  mutagen.yml  package.json  react-router.config.ts  sync-upstream.sh  vite.config.ts
.github/workflows/: build.yml  e2e.yml  release.yml
app/: root.tsx
app/client/api-client/: index.ts  types.gen.ts
app/client/components/: app-sidebar.tsx  auth-layout.tsx  cron-input.tsx  directory-browser.tsx  file-tree.tsx  layout.tsx  path-selector.tsx  release-notes-dialog.tsx  restore-form.tsx  snapshots-table.tsx  titlebar.tsx  volume-file-browser.tsx  volume-icon.tsx
app/client/contexts/: server-events-context.tsx
app/schemas/: volumes.ts
app/server/: app.ts
e2e/: 0001-auth.setup.ts
examples/basic-docker-compose/: README.md  docker-compose.yml
examples/directory-bind-mount/: docker-compose.yml
examples/rclone-config-mount/: docker-compose.yml
examples/secrets-placeholders/: .env.example  README.md  docker-compose.yml
examples/simplified-docker-compose/: docker-compose.yml
examples/tailscale-sidecar/: .env.example  README.md  docker-compose.yml
scripts/: README.md  build-sidecar.ts  build-tauri-frontend.ts  build-tauri.ts  config.ts  download-binaries.ts  install-windows-service.ps1  uninstall-windows-service.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/resources/: .gitignore
src-tauri/src/: lib.rs  main.rs
(+109 files in other folders)
