[package]
name = "c3i-backup-one"
version = "0.2.0"
description = "Backup automation tool powered by Restic"
authors = ["C3i Backup ONE"]
license = "MIT"
repository = "https://github.com/JBibu/c3i_backup_one"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "c3i_backup_one_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = ["tray-icon", "image-png"] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tauri-plugin-notification = "2"
tauri-plugin-single-instance = "2"
portpicker = "0.1"
tokio = { version = "1", features = ["sync", "time"] }
reqwest = { version = "0.12", features = ["json"] }
